# router

./: .gitignore  1149848.dcm  2024-06-29_03-41-35.bak  2024-06-29_03-41-35.kicad_sym  ARJM11C7-502-AB-ER2-T_ABR.kicad_mod  Cargo.toml  README.md  SMD-48.kicad_mod  XCVR_GSW140A3MC_S_LMHB.kicad_mod  router.kicad_sym
HSEC8-109-01-L-RA-TR/: HSEC8-109-01-L-RA-TR.step  SAMTEC_HSEC8-109-01-L-RA-TR.kicad_mod
SYZYGY-PHY/: #auto_saved_files#  NOTES.md  README.md  SYZYGY-PHY.kicad_pcb  SYZYGY-PHY.kicad_pro  SYZYGY-PHY.kicad_sch  SYZYGY-PHY.wrl  TEST.md  VRMLLoader.js  fp-lib-table  house.wrl  sym-lib-table  syzygy-phy.md  syzygy-phy.todo  webgl_loader_vrml.html  ~SYZYGY-PHY.kicad_sch.lck
SYZYGY-RGMII-tester/: SYZYGY-RGMII-tester-B_Cu.gbr  SYZYGY-RGMII-tester-B_Mask.gbr  SYZYGY-RGMII-tester-B_Paste.gbr  SYZYGY-RGMII-tester-B_Silkscreen.gbr  SYZYGY-RGMII-tester-Edge_Cuts.gbr  SYZYGY-RGMII-tester-F_Cu.gbr  SYZYGY-RGMII-tester-F_Mask.gbr  SYZYGY-RGMII-tester-F_Paste.gbr  SYZYGY-RGMII-tester-F_Silkscreen.gbr  SYZYGY-RGMII-tester-In1_Cu.gbr  SYZYGY-RGMII-tester-In2_Cu.gbr  SYZYGY-RGMII-tester-NPTH.drl  SYZYGY-RGMII-tester-PTH.drl  SYZYGY-RGMII-tester-job.gbrjob  SYZYGY-RGMII-tester.kicad_pcb  SYZYGY-RGMII-tester.kicad_pro  SYZYGY-RGMII-tester.kicad_sch  fp-lib-table  sym-lib-table
SYZYGY-breakout/: README.md  SYZYGY-breakout.kicad_pcb  SYZYGY-breakout.kicad_pro  SYZYGY-breakout.kicad_sch
dwf/: Cargo.toml  README.md  main.rs
footprints.pretty/: ARJM11C7-502-AB-ER2-T_ABR.kicad_mod
gsw141-breakout/: #auto_saved_files#  README.md  _autosave-gsw141-breakout.kicad_pcb  _autosave-gsw141-breakout.kicad_sch  fp-info-cache  fp-lib-table  gsw141-breakout.kicad_pcb  gsw141-breakout.kicad_prl  gsw141-breakout.kicad_pro  gsw141-breakout.kicad_sch  sym-lib-table
jtag/: Cargo.toml  jtag.rs  md.rs  mdio.rs  rust-toolchain.toml
jtag/.cargo/: config.toml
local/: 1149848.kicad_mod  1149848.kicad_sym  1149848.lib  1149848.mod  1149848.stp  AP7363-HA-7.dcm  AP7363-HA-7.kicad_sym  AP7363-HA-7.lib  AP7363-HA-7.mod  AP7363-HA-7.stp  ARJM11C7-009-AB-EW2.dcm  ARJM11C7-009-AB-EW2.lib  ARJM11C7-009-AB-EW2.mod  ARJM11C7-xxx-AB-EW2.kicad_sym  ARJM11C7009ABEW2.kicad_mod  ARJM11C7502KBEW2.kicad_mod  GPY111.dcm  GPY111.kicad_sym  GPY111.lib  GPY111.mod  GPY111.stp  HSEC8-109-01-L-RA-TR.bak  HSEC8-109-01-L-RA-TR.kicad_sym  Inductor 0806 (2016 metric).kicad_mod  PB400EEQR1BLK.kicad_sym  PB400EEQR1BLK_EWI.kicad_mod  QSH-020-01-X-D-DP-A.step  (+30 more)
(+10 files in other folders)
